.deploy/k8s/k8s-manifest.prod.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: ever-rec-portal-prod
spec:
  selector:
    app: ever-rec-portal-prod
  ports:
    - name: web
      protocol: TCP
      port: 4200
      targetPort: 4200

---
kind: Service
apiVersion: v1
metadata:
  name: ever-rec-api-prod
spec:
  selector:
    app: ever-rec-api-prod
  ports:
    - name: web
      protocol: TCP
      port: 3000
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ever-rec-api-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ever-rec-api-prod
  template:
    metadata:
      labels:
        app: ever-rec-api-prod
    spec:
      containers:
        - name: ever-rec-api-prod
          image: registry.digitalocean.com/ever/ever-rec-api:latest
          ports:
            - containerPort: 3000
              protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ever-rec-portal-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ever-rec-portal-prod
  template:
    metadata:
      labels:
        app: ever-rec-portal-prod
    spec:
      containers:
        - name: ever-rec-portal-prod
          image: registry.digitalocean.com/ever/ever-rec-portal:latest
          ports:
            - containerPort: 4200
              protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ever-rec-portal-prod-ing
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: app.rec.so
      http:
        paths:
          - backend:
              service:
                name: ever-rec-portal-prod
                port:
                  number: 4200
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - app.rec.so
      secretName: app.rec.so-tls

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ever-rec-api-prod-ing
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: api.rec.so
      http:
        paths:
          - backend:
              service:
                name: ever-rec-api-prod
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - api.rec.so
      secretName: api.rec.so-tls
