.deploy/k8s/k8s-manifest.yaml
---
kind: Service
apiVersion: v1
metadata:
    name: ever-rec-portal
spec:
    selector:
        app: ever-rec-portal
    ports:
        - name: web
          protocol: TCP
          port: 4200
          targetPort: 4200
---
kind: Service
apiVersion: v1
metadata:
    name: ever-rec-api
spec:
    selector:
        app: ever-rec-api
    ports:
        - name: web
          protocol: TCP
          port: 3000
          targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ever-rec-api
spec:
    replicas: 1
    selector:
        matchLabels:
            app: ever-rec-api
    template:
        metadata:
            labels:
                app: ever-rec-api
        spec:
            containers:
                - name: ever-rec-api
                  image: ghcr.io/ever-co/ever-rec-api:latest
                  ports:
                      - containerPort: 3000
                        protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ever-rec-portal
spec:
    replicas: 1
    selector:
        matchLabels:
            app: ever-rec-portal
    template:
        metadata:
            labels:
                app: ever-rec-portal
        spec:
            containers:
                - name: ever-rec-portal
                  image: ghcr.io/ever-co/ever-rec-portal:latest
                  ports:
                      - containerPort: 4200
                        protocol: TCP
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
    name: https-redirect
spec:
    redirectScheme:
        permanent: true
        scheme: https
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ever-rec
    namespace: default
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    rules:
        - host: app.rec.co
          http:
              paths:
                  - backend:
                        service:
                            name: ever-rec
                            port:
                                number: 4200
                    path: /
                    pathType: Prefix
    tls:
        - hosts:
              - app.rec.co
          secretName: app.rec.co-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ever-rec-api
    namespace: default
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    rules:
        - host: app.rec.co
          http:
              paths:
                  - backend:
                        service:
                            name: ever-rec-api
                            port:
                                number: 3000
                    path: /
                    pathType: Prefix
    tls:
        - hosts:
              - app.rec.co
          secretName: app.rec.co-tls
